kubernetes/apps/observability/kubernetes-dashboard/app/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: kubernetes-dashboard-kong-lb
  namespace: observability
spec:
  type: LoadBalancer
  ports:
    - name: kong-proxy-tls
      port: 443
      targetPort: 8443
  selector:
    app.kubernetes.io/component: app
    app.kubernetes.io/instance: kubernetes-dashboard
    app.kubernetes.io/name: kong
