kubernetes/apps/observability/kubernetes-dashboard/app/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: kubernetes-dashboard
  namespace: observability
spec:
  hostnames:
    - admin.k8s.${SECRET_DOMAIN}
  parentRefs:
    - name: internal
      namespace: kube-system
      sectionName: https
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: kubernetes-dashboard-kong-proxy
          port: 443
          protocol: HTTPS
